2009-10-13  vadim  <vadim@vk.crocodile.org>

	* VERSION (VERSION): started v3.0.8

2009-09-18  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler.cpp (ItfNegation::processNext): (change in
	libfwbuilder) fix for bug #2710034 "PF Compiler in 3.0.3
	Unprotected Interface Bug". When we expand "interface" rule
	element which uses negation, skip unprotected interfaces.

2009-09-16  vadim  <vadim@vk.crocodile.org>

 	* RoutingCompiler_ipt_writers.cpp (PrintRule::processNext): Fixed
	security issue with temporary file handling in the generated
	iptables script. The problem only affects Linux systems where
	Firewall Builder is used to generate static routing
	configuration. The problem exists in Firewall Builder versions
	3.0.4, 3.0.5, 3.0.6

2009-09-05  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_iosacl_writers.cpp (PrintRule::_printDstService):
	fixed bug (no #): policy compiler for Cisco IOS ACL did not add
	icmp type to the generated ipv6 access-list statements for rules
	that matched ICMPv6 services.

2009-08-30  vadim  <vadim@vk.crocodile.org>

	* instDialog_ui_ops.cpp (instDialog::addToLog): fixed bug #2847263
	"Batch compiling incrementally slow". The time it took to add a
	log line to the progress window in the "Compile" dialog slowed
	down a lot as amount of text in QTextEditor increased.

2009-08-27  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_pf.cpp (SplitDirection::processNext): applied
	patch per #2844561: "PF Compiler Direction Both Duplicate for
	Route Action". Need to split the rule if direction is Both
	and action is Route.

	* newFirewallDialog.cpp (newFirewallDialog::templateSelected):
	fixed bug #2844596: "Crash during newFirewallDialog". GUI crashed
	if user clicked "next" in the new firewall dialog to open page
	with templates, then clicked "Back" and then "Next" again.

	* ObjectManipulator.cpp (ObjectManipulator::select): fixed bug
	#2845667 "Crash after find object". When host object was found