@@ -48,8 +48,7 @@
 using namespace std;
 
 
-debugDialog::debugDialog(QWidget *parent) :
-    QDialog(parent, Qt::CustomizeWindowHint|Qt::WindowSystemMenuHint)
+debugDialog::debugDialog(QWidget *parent) : QDialog(parent)
 {
     m_dialog = new Ui::debugDialog_q;
     m_dialog->setupUi(this);
